# RustBucket

./: .gitignore  Cargo.toml  LICENSE  README.md
c2-server/: Cargo.toml
c2-server/cert-manager/: Cargo.toml
mtls_server_example/: Cargo.toml  client-key.pem  crl.der
mtls_server_example/src/: main.rs
rb/: Cargo.toml
rb/src/: client.rs  lib.rs  payload.rs  session.rs  task.rs
rb/src/command/: builtin.rs  mod.rs  registry.rs  types.rs
rb/src/command/implant_cmds/: cat.rs  ls.rs  mod.rs  pwd.rs  systeminfo.rs
rb/src/command/op_commands/: help.rs  list_agents.rs  mod.rs  ping.rs
rb/src/command/server_cmds/: help.rs  listeners.rs  mod.rs  payload_command.rs  sessions.rs  template.rs
rb/src/listener/: http_listener.rs  mod.rs
rb/src/message/: mod.rs
rb_client/: Cargo.toml
rb_client/src/: main.rs  utils.rs
rb_implant/: Cargo.toml
rb_implant/src/: lib.rs  main.rs
rb_payload_build/: Cargo.toml
rb_payload_build/src/: main.rs
rb_server/: Cargo.toml
rb_server/src/: agent.rs  cert_management.rs  client.rs  config.rs  context.rs  handler.rs  listener.rs  main.rs  new_server.rs  server.rs
rb_server/src/certs/: mod.rs
rb_server/src/listener/: http_listener.rs  mod.rs
server/: ca-cert.pem  client-cert.pem
