[package]
name = "rb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"]}
uuid = { version = "1.16.0", features = ["v4", "serde"]}
log = "0.4.26"
clap = "4.5.36"
futures = "0.3.31"
# rb_server = { path = "../rb_server" }
