[package]
name = "rb_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-ansi-term = "0.50.1"
reedline = "0.39.0"
serde = { version = "1.0.219", features = ["derive"] }
rb = { path = "../rb" }
serde_json = "1.0.140"
thiserror = "2.0.12"
colored = "3.0.0"
clap = { version = "4.5.36", features = ["derive"]}
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
rustls-pki-types = "1.3.0"
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["full"]}
tokio-rustls = "0.26.2"
