[package]
name = "rb_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
log = "0.4.26"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.44.1", features = ["full"]}
uuid = { version = "1.16.0", features = ["v4", "serde"]}
rb = { path = "../rb" }
tokio-util = "0.7.14"
futures = "0.3.31"
clap = "4.5.36"
